src/styles/global.css
/* ... */
.hero-scene {
  min-height: 630px;
  height: 100svh;
  max-height: 1200px;
  background: linear-gradient(180deg,
      #9a82f7 -39.21%,
      #c5b6ff 25%,
      #e7e2fa 89.21%);
  overflow: hidden;
}

/* .hero-scene .hero-info {
  padding-top: 40px;
} */

.big-scene {
  height: calc(100svh - 140px);
  min-height: auto;
}

@media all and (min-width: 1200px) {
  .big-scene {
    height: calc(105svh);
  }

  .workflow-info {
    width: calc(50% - 60px);
  }
}

.hero-light {
  background: linear-gradient(180deg,
      #dad1fe -39.21%,
      #dad1fe 25%,
      #e9e5fb 89.21%);
}

.hero-light .background-elements {
  position: absolute;
  height: auto;
}

.background-elements {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

.background-elements>* {
  transition: all 0.5s ease-out;
}

.hero-info {
  z-index: 2;
  position: relative;
}

.hero-title {
  text-align: center;
  color: #311772;
}

.dark-header .hero-title {
  color: #fff;
}

.hero-description {
  text-align: center;
}

.hero-title-section .hero-description {
  max-width: 850px;
  margin: 24px auto;
}
.hero-title-section.pricing .hero-description br{
display: none;
}
.hero-title-section .colorful-btn {
  color: #fff;
}

.hero-buttons {
  display: flex;
  gap: 20px;
  justify-content: center;
}

.cloud-buttons {
  width: 100%;
  display: flex;
  gap: 20px;
  justify-content: left;
  margin-top: 50px;
}

.cloud-left {
  position: absolute !important;
  left: 0px;
  top: 55px;
  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  -ms-transition: all 0.4s ease;
  transition: all 0.4s ease;
  animation: floatingRight 7s linear infinite alternate;
  width: 40%;
  max-width: 420px;
}

.cloud-right {
  position: absolute !important;
  top: 55px;
  right: 0px;
  animation: floatingRight 7s linear infinite alternate;
  width: 40%;
  max-width: 390px;
}

@media all and (min-width: 768px) {
  .cloud-left {
    left: -150px;
    top: -35px;
    width: 30%;
  }

  .cloud-right {
    top: 0;
    right: -130px;
    width: 30%;
  }

  body[data-prehead='true'] .cloud-left {
    left: -150px;
    top: 0;
    width: 30%;
  }

  body[data-prehead='true'] .cloud-right {
    top: 35px;
    right: -130px;
    width: 30%;
  }
}

@media all and (max-width: 768px) {
  .cloud-right {
    right: -24%;
  }
}

.community-bg {
  width: 100%;
  position: absolute;
  bottom: -1px;
  left: 0;
}

@keyframes floatingLeft {
  0% {
    transform: translateX(0px);
  }

  50% {
    transform: translateX(50px);
  }

  100% {
    transform: translateX(0px);
  }
}

@keyframes floatingRight {
  0% {
    transform: translateX(0px);
  }

  50% {
    transform: translateX(-50px);
  }

  100% {
    transform: translateX(0px);
  }
}

@keyframes floatingSpace {
  0% {
    transform: translateY(0);
    -webkit-transform: translateY(0);
  }

  50% {
    transform: translateY(50px);
    -webkit-transform: translateY(50px);
  }

  100% {
    transform: translateY(0);
    -webkit-transform: translateY(0);
  }
}

.hero-castle {
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: 1;
  width: 26%;
  transform: translateX(-20%);
}

.hero-waterfall {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 1;
  width: 20%;
  transform: translateX(20%);
}

.hero-bg {
  position: absolute;
  bottom: 0;
  width: 100%;
  transform: translateY(30%);
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.hero-sidebar-container {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: 30px;
  min-height: 500px;
  z-index: 2;
  position: relative;
  margin-top: 150px;
}

@media all and (min-width: 768px) {
  .hero-sidebar-container {
    margin-top: 150px;
    padding-top: 100px;
  }
}

.hero-sidebar {
  display: flex;
  flex-direction: column;
  margin-top: auto;
}

.hero-sidebar {
  margin-top: 0px;
}

.hero-sidebar .hero-title {
  text-align: left;
  color: #fff;
  margin: 0;
}

.hero-sidebar .hero-description {
  color: #fff;
  opacity: 0.7;
  text-align: left;
  max-width: 500px;
}

.hero-sidebar .hero-buttons {
  justify-content: flex-start;
  margin-top: 40px;
}

.hero-sidebar .btn {
  margin: 0;
}

.hero-sidebar .colorful-btn {
  color: #fff;
}

.hero-sidebar-bg-wrap {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  max-width: 1200px;
  margin: auto;
  display: flex;
  justify-content: flex-end;
  pointer-events: none;
}

@media all and (min-width: 768px) {
  .hero-sidebar-bg-wrap {
    top: -7%;
  }
}

.hero-sidebar-container .hero-info {
  width: 62%;
}

.hero-sidebar-bg {
  width: 530px;
  margin-top: 6%;
  margin-right: -60px;
  position: absolute;
  bottom: 0;
  right: 0;
}

.hero-mini-box {
  background: rgba(255, 255, 255, 0.05);
  border: 1px solid rgba(255, 255, 255, 0.15);
  backdrop-filter: blur(7px);
  border-radius: 4.6px;
  margin-top: 15px;
  padding: 30px;
  max-width: 400px;
  transition: all 0.2s ease-in;
}

.hero-mini-box:hover {
  border: 1px solid #18c3fa;
  backdrop-filter: blur(13px);
}

.hero-mini-box:first-child .hero-mini-box-btn,
.hero-mini-box:first-child .brackets:before,
.hero-mini-box:first-child .brackets:after {
  color: #18c3fa;
}

.hero-mini-box:nth-child(2) .hero-mini-box-btn,
.hero-mini-box:nth-child(2) .brackets:before,
.hero-mini-box:nth-child(2) .brackets:after {
  color: #fbcc54;
}

.hero-mini-box-btn {
  font-family: 'IBM Plex Mono', Arial, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 100%;
  padding: 10px 16px;
  background: rgba(255, 255, 255, 0.1);
  border-radius: 4.6px;
}

.hero-mini-box h5 {
  margin-top: 15px;
}

.hero-mini-box p {
  color: #fff;
  opacity: 0.7;
}

.hero-title-section {
  padding-top: 200px;
  padding-bottom: 130px;
  overflow-y: hidden;
}

.hero-title {
  margin: auto;
}

.dark-header .hero-description {
  color: rgba(255, 255, 255, 0.7);
}

.big-scene .background-elements {
  position: absolute;
  min-height: calc(100vh - 140px);
  height: calc(100vh - 140px);
}
/* ... */

